fix(oh drawer): z-index (#4046)

--- a/app/styles/components/modules/template-builder.scss
+++ b/app/styles/components/modules/template-builder.scss
@@ -1,12 +1,6 @@
 @import '../../../../node_modules/grapesjs/dist/css/grapes.min.css';
 
 .template-builder {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
 
   .gjs-sm-header {
     display: none !important;
